# ChangeLog for x11-misc/xchm
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/xchm/ChangeLog,v 1.25 2005/03/28 21:35:57 hansmi Exp $

  28 Mar 2005; Michael Hanselmann <hansmi@gentoo.org> xchm-0.9.6.ebuild:
  Stable on ppc.

*xchm-0.9.8 (23 Feb 2005)

  23 Feb 2005; Martin Holzer <mholzer@gentoo.org> +xchm-0.9.8.ebuild:
  Version bumped.

*xchm-0.9.7 (24 Dec 2004)

  24 Dec 2004; Martin Holzer <mholzer@gentoo.org> +xchm-0.9.7.ebuild:
  Version bumped.

*xchm-0.9.5 (24 Dec 2004)

  24 Dec 2004; Martin Holzer <mholzer@gentoo.org> xchm-0.9.5.ebuild:
  x86 stable

*xchm-0.9.6 (31 Oct 2004)

  31 Oct 2004; Martin Holzer <mholzer@gentoo.org> +xchm-0.9.6.ebuild:
  Version bumped.

  29 Sep 2004; <pyrania@gentoo.org> xchm-0.9.2.ebuild, xchm-0.9.3.ebuild:
  Marked stable on x86.

*xchm-0.9.4 (16 Sep 2004)

  16 Sep 2004; Martin Holzer <mholzer@gentoo.org> xchm-0.9.4.ebuild:
  Version bumped.

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org> xchm-0.8.11.ebuild,
  xchm-0.9.1.ebuild, xchm-0.9.2.ebuild, xchm-0.9.3.ebuild, xchm-0.9.ebuild:
  Masked xchm-0.9.ebuild stable for ppc

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org> xchm-0.8.11.ebuild,
  xchm-0.9.1.ebuild, xchm-0.9.2.ebuild, xchm-0.9.3.ebuild:
  Masked xchm-0.9.3.ebuild stable for ppc

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org> xchm-0.8.11.ebuild,
  xchm-0.9.1.ebuild, xchm-0.9.2.ebuild:
  Masked xchm-0.9.2.ebuild stable for ppc

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org> xchm-0.8.11.ebuild,
  xchm-0.9.1.ebuild:
  Masked xchm-0.9.1.ebuild stable for ppc

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org> xchm-0.8.11.ebuild:
  Masked xchm-0.8.11.ebuild stable for ppc

*xchm-0.9.3 (29 Aug 2004)

  29 Aug 2004; Martin Holzer <mholzer@gentoo.org> xchm-0.9.3.ebuild:
  Version bumped.

*xchm-0.9.2 (19 Jul 2004)

  19 Jul 2004; Martin Holzer <mholzer@gentoo.org> xchm-0.9.2.ebuild: