@@ -1,10 +1,8 @@
-MD5 8b8727a304ea575b3bf6b6c9309fe74f xchm-0.9.6.ebuild 718
-MD5 43d283d3b605bc25b4217ee6c585d5a6 xchm-0.9.3.ebuild 719
+MD5 153d3959238ee5bd3df4b55cf63fc861 ChangeLog 4789
 MD5 fe402b096905cae8dcb4a503d3a838ac metadata.xml 173
-MD5 936f841483c07a6eed488d06d8daf764 ChangeLog 4613
+MD5 8b8727a304ea575b3bf6b6c9309fe74f xchm-0.9.6.ebuild 718
 MD5 ba76b5174f8b32140aba54f384ac0dad xchm-0.9.8.ebuild 721
-MD5 2178f72ebce7b289362bc074303d5a6e xchm-0.9.7.ebuild 721
-MD5 37082eeb0165e41ee380fd13e8b0882a files/digest-xchm-0.9.8 128
-MD5 3eba16532da12e7abefdc862ccbdf2ac files/digest-xchm-0.9.3 127
-MD5 f5917ff42f223e8448dc6317dfc869fd files/digest-xchm-0.9.7 127
+MD5 d54e32abf9f26f0de09febcbedbce048 xchm-1.0.ebuild 718
 MD5 1333608642124dbc0be70c60e627fd9c files/digest-xchm-0.9.6 127
+MD5 37082eeb0165e41ee380fd13e8b0882a files/digest-xchm-0.9.8 128
+MD5 42e73319b72a6c0c603afa32025bc888 files/digest-xchm-1.0 124
