@@ -1,2 +1,0 @@
-MD5 9ed409d501a00d78fd32e1582fca2e34 xchm-0.9.3.tar.gz 323944
-MD5 f2918ae9111ae43ae8eb8a56adb47a63 xchm-0.9.3-doc.tar.gz 74130
