@@ -1,2 +1,0 @@
-MD5 7481fceb17035e5dd10b9547bd56ee98 xchm-0.9.7.tar.gz 323675
-MD5 71e49b6a88f08b78b7866240f7889b3d xchm-0.9.7-doc.tar.gz 76540
