@@ -1,0 +1,2 @@
+MD5 808e87a2a00683b5142e9f74398a20b4 xchm-1.0.tar.gz 325863
+MD5 fd4fd1a603eeeaea206ecd3cde6b41f0 xchm-1.0-doc.tar.gz 108949
