@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xchm/xchm-0.9.7.ebuild,v 1.2 2005/02/23 16:12:02 mholzer Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xchm/xchm-1.0.ebuild,v 1.1 2005/06/14 00:10:02 smithj Exp $
 
 DESCRIPTION="Utility for viewing Microsoft .chm files."
 HOMEPAGE="http://xchm.sf.net"
