@@ -1,6 +1,12 @@
 # ChangeLog for x11-misc/xchm
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xchm/ChangeLog,v 1.25 2005/03/28 21:35:57 hansmi Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xchm/ChangeLog,v 1.26 2005/06/14 00:10:02 smithj Exp $
+
+*xchm-1.0 (14 Jun 2005)
+
+  14 Jun 2005; Jonathan Smith <smithj@gentoo.org> -xchm-0.9.3.ebuild,
+  -xchm-0.9.7.ebuild, +xchm-1.0.ebuild:
+  version bump to close #95282, cleanup
 
   28 Mar 2005; Michael Hanselmann <hansmi@gentoo.org> xchm-0.9.6.ebuild:
   Stable on ppc.
